<resources>

    <string name="app_name">Simple Quiz</string>
    <string name="default_question">Question Loading...</string>
    <string name="no_button">NO</string>
    <string name="yes_button">YES</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>

    <string name="correct_toast">Your answer is correct.</string>
    <string name="incorrect_toast">Your answer is incorrect, try again.</string>

    <string name="question1">1. A cross between a horse and a zebra is called a Hobra.</string>
    <string name="question2">2. When the two numbers on opposite sides of a dice are added together it always equals 7.</string>
    <string name="question3">3. In a deck of cards, the king has a mustache.</string>
    <string name="question4">4. Hot and cold water sound the same when poured.</string>
    <string name="question5">5. There are 14 bones in a human foot.</string>
    <string name="question6">6. Goldfish have a two second memory.</string>
    <string name="question7">7. Fish cannot blink.</string>
    <string name="question8">8. Bananas are curved because they grow upwards towards the sun.</string>
    <string name="question9">9. Venus is the hottest planet in the solar system.</string>
    <string name="question10">10. Thomas Edison discovered gravity.</string>

</resources>